checkout-page-update

--- a/item.html
+++ b/item.html
@@ -24,7 +24,7 @@
                     <li class="fill-current px-7 hover:text-purple-950"> 
                         <a class="relative flex" href="checkout.html">
                             <img class="h-10 fill-current hover:fill-purple-950 " src="assent/img/icon/cart-icon.png">
-                            <div class="cart-quantity absolute left-[28px] font-bold">0</div>
+                            <div class="js-cart-num cart-quantity absolute left-[28px] font-bold">0</div>
                             <div class="ml-2 text-lg font-bold cart-text">Cart</div>
                           </a>
                     </li>
