--- a/checkout.html
+++ b/checkout.html
@@ -13,8 +13,9 @@
             <div>
                 <a href=""> <img src="assent/img/amazon-logo-white.png" class="h-10 ml-10" alt=""></a>
             </div>
-            <div class="font-bold text-[35px] text-center ">
-                Checkout(3item)
+            <div class="font-bold text-[35px] text-center js-checko">
+              Checkout (<a class="return-to-home-link"
+              href="amazon.html">3 items</a>)
             </div>
             <div>
                 <img src="assent/img/icon/checkout-lock-icon.png" class="w-5 " alt="">
@@ -79,7 +80,7 @@
         
     </div>
 
-    
+<script src="https://unpkg.com/dayjs@1.11.10/esm/index.js"> </script>    
 <script type="module" src="assent/script/checkout.js"></script>
 </body>
 </html>
